Updated package.json, added yarn.lock

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-cors-spa",
+  "version": "1.0.0",
+  "private": false,
+  "email": "jguilloi@amazon.fr",
+  "license": "MIT-0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
