--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": false,
   "email": "jguilloi@amazon.fr",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "react-scripts": "^4.0.3"
+  },
+  "dependencies": {
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
