Updated CloudFormation stack with ViewerCertificate section

--- a/react-cors-spa-stack.yaml
+++ b/react-cors-spa-stack.yaml
@@ -156,6 +156,9 @@ Resources:
         Logging:
           Bucket: !GetAtt LoggingBucket.RegionalDomainName
           Prefix: 'cloudfront-access-logs'
+        ViewerCertificate:
+          CloudFrontDefaultCertificate: true
+          MinimumProtocolVersion: 'TLSv1'
 
   # The Amazon CloudFront origin access identity
   CFOriginAccessIdentity:
