Optimized stack, removed unused files

--- a/react-cors-spa-stack.yaml
+++ b/react-cors-spa-stack.yaml
@@ -3,18 +3,18 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Creates the infrastructure to host and expose a Single Page Application:
       - An Amazon S3 bucket for hosting the application
-      - An Amazon CloudFront distribution to expose the application
+      - An Amazon CloudFront distribution to expose the application and the API
       - An Amazon S3 bucket for hosting bucket and cloudfront access logs
-      - A public API to be used by the application to demonstrate CORS configuration
+      - A public API to be used by the application
 
 Parameters: {}
 
 Resources:
-  # Our simple CORS compliant REST API
+  # Our simple REST API
   SimpleAPI:
     Type: 'AWS::ApiGateway::RestApi'
     Properties:
-      Description: A simple CORS compliant API
+      Description: A simple REST API
       Name: SimpleAPI
       EndpointConfiguration:
         Types:
@@ -46,14 +46,10 @@ Resources:
         IntegrationResponses:
           - StatusCode: 200
             SelectionPattern: 200
-            ResponseParameters:
-              method.response.header.Access-Control-Allow-Origin: '''*'''
             ResponseTemplates:
               application/json: "{\"message\": \"Hello World!\"}"
       MethodResponses:
         - StatusCode: 200
-          ResponseParameters:
-            method.response.header.Access-Control-Allow-Origin: true
           ResponseModels:
             application/json: Empty
       RestApiId: !Ref SimpleAPI
@@ -176,6 +172,10 @@ Resources:
           OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf # CORS-S3Origin
           ResponseHeadersPolicyId: 67f7725c-6f97-4210-82d7-5512b31e9d03 # SecurityHeadersPolicy
           ViewerProtocolPolicy: redirect-to-https
+        CustomErrorResponses:
+          - ErrorCode: 403
+            ResponseCode: 200
+            ResponsePagePath: /index.html
         CacheBehaviors:
           - PathPattern: "v1/hello"
             AllowedMethods:
@@ -209,9 +209,7 @@ Resources:
         SigningProtocol: sigv4
 
 Outputs:
-  APIEndpoint:
-    Value: !Sub "https://${SimpleAPI}.execute-api.${AWS::Region}.amazonaws.com/v1/hello"
   BucketName:
     Value: !Sub "react-cors-spa-${SimpleAPI}"
-  CFDistributionURL:
+  CFDistributionDomain:
     Value: !GetAtt CFDistribution.DomainName
