--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.9",
+    "next": "^14.2.9",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5"
