--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "word-wrap": "1.2.4"
   },
   "dependencies": {
     "react": "^18.2.0",
