--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "decode-uri-component": "0.2.2",
+    "json5": "1.0.2",
+    "loader-utils": "2.0.4",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
+    "semver": "6.3.1",
+    "tough-cookie": "4.1.3",
+    "webpack": "5.99.8",
     "word-wrap": "1.2.4"
   },
   "dependencies": {
